# ufa-aec-possessions

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_team_aec_possession_shapes.ipynb  02_team_aec_t_leaderboard.ipynb  03_high_value_possession_stories.ipynb  04_lag_contribution_per_touch.ipynb
scripts/: analyze_team.py
src/ufa_aec_possessions/: __init__.py  browser.py  fetching.py  leaderboards.py  players.py  plotting.py  possessions.py  selection.py
tests/: test_browser.py  test_fetching.py  test_leaderboards.py  test_players.py  test_plotting.py  test_possessions.py
